--- a/Ansible/demo.yml
+++ b/Ansible/demo.yml
@@ -22,22 +22,22 @@
          - github
 
       - name: Copy JBoss EAP for Datacenter images if exists
-        copy: src=./../software/jboss-eap-6.4.0.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
+        copy: src=./../software/jboss-eap-7.0.0.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
         tags:
          - copy_applications
 
-      - name: Copy JBoss EAP V6.4.6 patch for Datacenter images if exists
-        copy: src=./../software/jboss-eap-6.4.6-patch.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
+      - name: Copy JBoss EAP patch for Datacenter images if exists
+        copy: src=./../software/jboss-eap-7.0.3-patch.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
         tags:
          - copy_applications
 
       - name: Copy JBoss BPM if exists
-        copy: src=./../software/jboss-bpmsuite-6.2.0.GA-deployable-eap6.x.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
+        copy: src=./../software/jboss-bpmsuite-6.4.0.GA-deployable-eap7.x.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
         tags:
          - copy_applications
 
       - name: Copy JBoss DataGrid Libraries for EAP if exists
-        copy: src=./../software/jboss-datagrid-6.6.0-eap-modules-library.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
+        copy: src=./../software/jboss-datagrid-7.0.0-eap-modules-library.zip dest=../IoT_Demo_Datacenter/bpm/Docker_Files/software/
         tags:
          - copy_applications
 
