--- a/Ansible/demo.yml
+++ b/Ansible/demo.yml
@@ -11,6 +11,7 @@
       - name: Clone Smart Datacenter code from github
         git: repo=https://github.com/PatrickSteiner/IoT_Demo_Datacenter.git
              dest=./../IoT_Demo_Datacenter force=yes
+             version=GuidedDecisionTable
         tags:
          - github
 
