--- a/Ansible/demo.yml
+++ b/Ansible/demo.yml
@@ -5,6 +5,7 @@
       - name: Clone Smart Gateway code from github
         git: repo=https://github.com/PatrickSteiner/IoT_Demo_Gateway.git
              dest=./../IoT_Demo_Gateway force=yes
+             version=master
         tags:
          - github
 
