--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ receiver:
                 - "61616:61616"
         environment:
                 - INFLUXDASHBOARD=FALSE
-                - INFLUXHOST=<your dashboard IP>
+                - INFLUXHOST=localhost
                 - INFLUXPORT=8086
                 - INFLUXURI=write?db=IoT_Demo
         privileged: true
@@ -27,13 +27,14 @@ rules:
         links:
                - receiver
                - bpm
-               - smartgateway
+#               - smartgateway
                - jdg
         environment:
                - SOURCE_AMQ_BROKER=tcp://receiver:61616
-               - TARGET_MQTT_BROKER=tcp://smartgateway:1883
+#               - TARGET_MQTT_BROKER=tcp://smartgateway:1883
+               - TARGET_MQTT_BROKER=tcp://10.42.0.2:1883
                - SOURCE_QUEUE=message.to.rules
-               - TARGET_QUEUE=message.to.datacenter
+               - TARGET_QUEUE=message.from.datacenter
                - BROKER_ADMIN_UID=admin
                - BROKER_ADMIN_PASSWD=change12_me
                - RULES_FILE=file:///home/psteiner/Rules/DecisionTable.xls
@@ -74,46 +75,46 @@ jdg:
 # Containers running in the Smart Gateway
 # if you want to run the Smart Gateway on the device, drop the following sections (smartgateway, rulescep)
 # Above change the smartgateway address according your network configuration
-smartgateway:
-        build: ./IoT_Demo_Gateway/Smart_Gateway
-        hostname: smartgateway
-        expose:
-                - 8181
-                - 61616
-                - 1883
-        links:
-                - receiver
-        ports:
-                - "8182:8181"
-                - "61617:61616"
-                - "1883:1883"
-        environment:
-                - GATEWAY_JMS_BROKER_URL=tcp://smartgateway:61616
-                - DATACENTER_JMS_BROKER_URL=tcp://receiver:61616
-                - BROKER_ADMIN_UID=admin
-                - BROKER_ADMIN_PASSWD=change12_me
-                - JAVA_MIN_MEM=256M
-                - JAVA_MAX_MEM=256M
-                - JAVA_PERM_MEM=128M
-                - JAVA_MAX_PERM_MEM=128M
-        privileged: true
-        volumes:
-                - ./IoT_Demo_Gateway/Smart_Gateway/target:/home/psteiner/fuse/deploy
-                - ~/.m2/repository:/home/psteiner/.m2/repository
-
-rulescep:
-      build: ./IoT_Demo_Gateway/Rules_CEP
-      hostname: rulescep
-      links:
-               - smartgateway
-               - receiver
-      environment:
-               - SOURCE_AMQ_BROKER=tcp://smartgateway:61616
-               - TARGET_AMQ_BROKER=tcp://receiver:61616
-               - SOURCE_QUEUE=message.to.rules_cep
-               - TARGET_QUEUE=message.to.datacenter
-               - BROKER_ADMIN_UID=admin
-               - BROKER_ADMIN_PASSWD=change12_me
-      privileged: true
-      volumes:
-               - ./IoT_Demo_Gateway/Rules_CEP/target:/home/psteiner/target
+#smartgateway:
+#        build: ./IoT_Demo_Gateway/Smart_Gateway
+#        hostname: smartgateway
+#        expose:
+#                - 8181
+#                - 61616
+#                - 1883
+#        links:
+#                - receiver
+#        ports:
+#                - "8182:8181"
+#                - "61617:61616"
+#                - "1883:1883"
+#        environment:
+#                - GATEWAY_JMS_BROKER_URL=tcp://192.168.122.1:61616
+#                - DATACENTER_JMS_BROKER_URL=tcp://localhost:61616
+#                - BROKER_ADMIN_UID=admin
+#                - BROKER_ADMIN_PASSWD=change12_me
+#                - JAVA_MIN_MEM=256M
+#                - JAVA_MAX_MEM=256M
+#                - JAVA_PERM_MEM=128M
+#                - JAVA_MAX_PERM_MEM=128M
+#        privileged: true
+#        volumes:
+#                - ./IoT_Demo_Gateway/Smart_Gateway/target:/home/psteiner/fuse/deploy
+#                - ~/.m2/repository:/home/psteiner/.m2/repository
+#
+#rulescep:
+#      build: ./IoT_Demo_Gateway/Rules_CEP
+#      hostname: rulescep
+#      links:
+#               - smartgateway
+#               - receiver
+#      environment:
+#               - SOURCE_AMQ_BROKER=tcp://smartgateway:61616
+#               - TARGET_AMQ_BROKER=tcp://192.168.122.1:61616
+#               - SOURCE_QUEUE=message.to.rules_cep
+#               - TARGET_QUEUE=message.to.datacenter
+#               - BROKER_ADMIN_UID=admin
+#               - BROKER_ADMIN_PASSWD=change12_me
+#      privileged: true
+#      volumes:
+#              - ./IoT_Demo_Gateway/Rules_CEP/target:/home/psteiner/target
